Logica de Programacao - Array - Exercicio 2 - Refact

--- a/32_Logica_de_Programacao/15.2_array_exercicio_2.html
+++ b/32_Logica_de_Programacao/15.2_array_exercicio_2.html
@@ -23,7 +23,7 @@
             // Pega o numero atual
             let numeroAtual = arr[i];
             // Verifica os pares
-            if( numeroAtual % 2 === 0);{
+            if( numeroAtual % 2 === 0){
                 // Soma o valor atual
                 resultado += numeroAtual;
             }
