--- a/33_JavaScript/00_base.html
+++ b/33_JavaScript/00_base.html
@@ -3,10 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Curso Javacript</title>
+    <title>Curso Javacript - </title>
 </head>
 <body>
-    <h1>Curso JavaScript</h1>
+    <h1>Curso JavaScript - </h1>
 </body>
 
     <script>
