--- a/33_JavaScript/05_funcoes_problem.html
+++ b/33_JavaScript/05_funcoes_problem.html
@@ -25,7 +25,7 @@
             let media = soma / i;
 
             htmlResult += "A média é: " + media;
-            divOutput.innerHTML += htmlResult;
+            divOutput.innerHTML = htmlResult;
         }
         
         media(5, 5, 5);
