Curso Javascript - DOM - Parte 4 - Exercicios 6

--- a/33_JavaScript/06.2_dom_ex5.html
+++ b/33_JavaScript/06.2_dom_ex5.html
@@ -18,6 +18,6 @@
         const sobrenome = "Lobo";
 
         document.querySelector("#txtNome").value = nome + " " + sobrenome;
-        document.querySelector("#txtNome").disabled = true;
+        document.querySelector("#txtNome").readOnly = true;
     </script>
 </html>
