Curso Javascript - Eventos

--- a/34_Javascrip_Objetos/04_objetos_desafio.html
+++ b/34_Javascrip_Objetos/04_objetos_desafio.html
@@ -10,7 +10,8 @@
     <div id="output"></div>
 </body>
 
-    <script>        const output = document.querySelector("#output");
+    <script>        
+        const output = document.querySelector("#output");
 
         function Pessoa(nome, sobrenome){
             this.nome = nome;
